# Leetcoding

./: 2260. Minimum Consecutive Cards to Pick Up.py  290. Word Pattern.py  pyproject.toml
DP/: 1137. N-th Tribonacci Number.py  198. House Robber.py  343. Integer Break.py  509. Fibonacci Number.py  55. Jump Game.py
Interval problems/: 435. Non-overlapping Intervals.py  56. Merge Intervals.py  57. Insert Interval.py  Meeting Schedule II.py  Meeting Schedule.py
arrays/: 122. Best Time to Buy and Sell Stock II.py  128. Longest Consecutive Sequence.py  1299. Replace Elements with Greatest Element on Right Side.py  1471. The k Strongest Values in an Array.py  1827. Minimum Operations to Make the Array Increasing.py  1877. Minimize Maximum Pair Sum in Array.py  189. Rotate Array.py  1893. Check if All the Integers in a Range Are Covered.py  2144. Minimum Cost of Buying Candies With Discount.py  2442. Count Number of Distinct Integers After Reverse Operations.py  2586. Count the Number of Vowel Strings in Range.py  2592. Maximize Greatness of an Array.py  26. Remove Duplicates from Sorted Array.py  41. First Missing Positive.py  560. Subarray Sum Equals K.py  605. Can Place Flowers.py  6327. Form Smallest Number From Two Digit Arrays.py  75. Sort Colors.py  80. Remove Duplicates from Sorted Array II.py  821. Shortest Distance to a Character.py  985. Sum of Even Numbers After Queries.py  997. Find the Town Judge.py
backtracking/: 17. Letter Combinations of a Phone Number.py  39. Combination Sum.py  46. Permutations.py  78. Subsets.py  90. Subsets II.py
(+131 files in other folders)
