[tool.poetry]
name = "problems"
version = "0.1.0"
description = ""
authors = ["Aiana Abdyrakhmanova <73655002+luianqi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
